--- a/index.ipynb
+++ b/index.ipynb
@@ -35,11 +35,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load required libraries\n"
+    "# Load required libraries\n",
+    "import pandas as pd\n",
+    "import pandas.tseries\n",
+    "import statsmodels.api as sm\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -56,11 +60,365 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>co2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1958-03-29</th>\n",
+       "      <td>316.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-04-05</th>\n",
+       "      <td>317.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-04-12</th>\n",
+       "      <td>317.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-04-19</th>\n",
+       "      <td>317.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-04-26</th>\n",
+       "      <td>316.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-05-03</th>\n",
+       "      <td>316.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-05-10</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-05-17</th>\n",
+       "      <td>317.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-05-24</th>\n",
+       "      <td>317.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-05-31</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-06-07</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-06-14</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-06-21</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-06-28</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-07-05</th>\n",
+       "      <td>315.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-07-12</th>\n",
+       "      <td>315.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-07-19</th>\n",
+       "      <td>315.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-07-26</th>\n",
+       "      <td>315.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-08-02</th>\n",
+       "      <td>315.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-08-09</th>\n",
+       "      <td>315.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-08-16</th>\n",
+       "      <td>315.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-08-23</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-08-30</th>\n",
+       "      <td>314.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-09-06</th>\n",
+       "      <td>313.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-09-13</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-09-20</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-09-27</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-10-04</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-10-11</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-10-18</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-06-09</th>\n",
+       "      <td>373.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-06-16</th>\n",
+       "      <td>372.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-06-23</th>\n",
+       "      <td>372.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-06-30</th>\n",
+       "      <td>372.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-07-07</th>\n",
+       "      <td>372.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-07-14</th>\n",
+       "      <td>371.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-07-21</th>\n",
+       "      <td>371.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-07-28</th>\n",
+       "      <td>370.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-08-04</th>\n",
+       "      <td>369.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-08-11</th>\n",
+       "      <td>369.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-08-18</th>\n",
+       "      <td>369.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-08-25</th>\n",
+       "      <td>369.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-09-01</th>\n",
+       "      <td>368.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-09-08</th>\n",
+       "      <td>368.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-09-15</th>\n",
+       "      <td>368.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-09-22</th>\n",
+       "      <td>367.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-09-29</th>\n",
+       "      <td>367.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-10-06</th>\n",
+       "      <td>367.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-10-13</th>\n",
+       "      <td>367.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-10-20</th>\n",
+       "      <td>368.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-10-27</th>\n",
+       "      <td>368.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-11-03</th>\n",
+       "      <td>368.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-11-10</th>\n",
+       "      <td>368.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-11-17</th>\n",
+       "      <td>369.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-11-24</th>\n",
+       "      <td>370.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-12-01</th>\n",
+       "      <td>370.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-12-08</th>\n",
+       "      <td>370.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-12-15</th>\n",
+       "      <td>371.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-12-22</th>\n",
+       "      <td>371.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-12-29</th>\n",
+       "      <td>371.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2284 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              co2\n",
+       "date             \n",
+       "1958-03-29  316.1\n",
+       "1958-04-05  317.3\n",
+       "1958-04-12  317.6\n",
+       "1958-04-19  317.5\n",
+       "1958-04-26  316.4\n",
+       "1958-05-03  316.9\n",
+       "1958-05-10    NaN\n",
+       "1958-05-17  317.5\n",
+       "1958-05-24  317.9\n",
+       "1958-05-31    NaN\n",
+       "1958-06-07    NaN\n",
+       "1958-06-14    NaN\n",
+       "1958-06-21    NaN\n",
+       "1958-06-28    NaN\n",
+       "1958-07-05  315.8\n",
+       "1958-07-12  315.8\n",
+       "1958-07-19  315.4\n",
+       "1958-07-26  315.5\n",
+       "1958-08-02  315.6\n",
+       "1958-08-09  315.1\n",
+       "1958-08-16  315.0\n",
+       "1958-08-23    NaN\n",
+       "1958-08-30  314.1\n",
+       "1958-09-06  313.5\n",
+       "1958-09-13    NaN\n",
+       "1958-09-20    NaN\n",
+       "1958-09-27    NaN\n",
+       "1958-10-04    NaN\n",
+       "1958-10-11    NaN\n",
+       "1958-10-18    NaN\n",
+       "...           ...\n",
+       "2001-06-09  373.1\n",
+       "2001-06-16  372.8\n",
+       "2001-06-23  372.9\n",
+       "2001-06-30  372.7\n",
+       "2001-07-07  372.1\n",
+       "2001-07-14  371.3\n",
+       "2001-07-21  371.2\n",
+       "2001-07-28  370.6\n",
+       "2001-08-04  369.9\n",
+       "2001-08-11  369.5\n",
+       "2001-08-18  369.3\n",
+       "2001-08-25  369.0\n",
+       "2001-09-01  368.4\n",
+       "2001-09-08  368.2\n",
+       "2001-09-15  368.0\n",
+       "2001-09-22  367.4\n",
+       "2001-09-29  367.4\n",
+       "2001-10-06  367.8\n",
+       "2001-10-13  367.6\n",
+       "2001-10-20  368.1\n",
+       "2001-10-27  368.7\n",
+       "2001-11-03  368.7\n",
+       "2001-11-10  368.8\n",
+       "2001-11-17  369.7\n",
+       "2001-11-24  370.3\n",
+       "2001-12-01  370.3\n",
+       "2001-12-08  370.8\n",
+       "2001-12-15  371.2\n",
+       "2001-12-22  371.3\n",
+       "2001-12-29  371.5\n",
+       "\n",
+       "[2284 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Load the \"co2\" dataset from sm.datasets\n"
+    "CO2 = pd.DataFrame.from_records(sm.datasets.co2.load().data)\n",
+    "CO2['date'] = CO2.date.apply(lambda x: x.decode('utf-8'))\n",
+    "CO2['date'] = pd.to_datetime(CO2.date, format='%Y%m%d')\n",
+    "CO2.set_index('date')"
    ]
   },
   {
@@ -72,13 +430,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "         date    co2\n",
+      "0  1958-03-29  316.1\n",
+      "1  1958-04-05  317.3\n",
+      "2  1958-04-12  317.6\n",
+      "3  1958-04-19  317.5\n",
+      "4  1958-04-26  316.4\n",
+      "5  1958-05-03  316.9\n",
+      "6  1958-05-10    NaN\n",
+      "7  1958-05-17  317.5\n",
+      "8  1958-05-24  317.9\n",
+      "9  1958-05-31    NaN\n",
+      "10 1958-06-07    NaN\n",
+      "11 1958-06-14    NaN\n",
+      "12 1958-06-21    NaN\n",
+      "13 1958-06-28    NaN\n",
+      "14 1958-07-05  315.8\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the datatype of CO2 and check first 15 values\n",
+    "print(type(CO2))\n",
+    "print(CO2.head(15))\n",
     "\n",
     "# datatype of CO2 is <class 'pandas.core.frame.DataFrame'>\n",
     "\n",
@@ -115,11 +499,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RangeIndex(start=0, stop=2284, step=1)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Confirm that date values are used for indexing purpose in the CO2 dataset \n",
+    "CO2.index\n",
     "\n",
     "# DatetimeIndex(['1958-03-29', '1958-04-05', '1958-04-12', '1958-04-19',\n",
     "#                '1958-04-26', '1958-05-03', '1958-05-10', '1958-05-17',\n",
@@ -156,14 +552,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Only valid with DatetimeIndex, TimedeltaIndex or PeriodIndex, but got an instance of 'RangeIndex'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-26-8cc2be079d77>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# get the first 10 elements of resulting timeseries\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mCO2_monthly\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mCO2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'co2'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'MS'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mCO2_monthly_mean\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCO2_monthly\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/envs/learn-env/lib/python3.6/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36mresample\u001b[0;34m(self, rule, how, axis, fill_method, closed, label, convention, kind, loffset, limit, base, on, level)\u001b[0m\n\u001b[1;32m   7108\u001b[0m                      \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkind\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkind\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloffset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mloffset\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7109\u001b[0m                      \u001b[0mconvention\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconvention\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 7110\u001b[0;31m                      base=base, key=on, level=level)\n\u001b[0m\u001b[1;32m   7111\u001b[0m         return _maybe_process_deprecations(r,\n\u001b[1;32m   7112\u001b[0m                                            \u001b[0mhow\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mhow\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/envs/learn-env/lib/python3.6/site-packages/pandas/core/resample.py\u001b[0m in \u001b[0;36mresample\u001b[0;34m(obj, kind, **kwds)\u001b[0m\n\u001b[1;32m   1146\u001b[0m     \u001b[0;34m\"\"\" create a TimeGrouper and return our resampler \"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1147\u001b[0m     \u001b[0mtg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTimeGrouper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1148\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mtg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_resampler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkind\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkind\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1149\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1150\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/envs/learn-env/lib/python3.6/site-packages/pandas/core/resample.py\u001b[0m in \u001b[0;36m_get_resampler\u001b[0;34m(self, obj, kind)\u001b[0m\n\u001b[1;32m   1274\u001b[0m         raise TypeError(\"Only valid with DatetimeIndex, \"\n\u001b[1;32m   1275\u001b[0m                         \u001b[0;34m\"TimedeltaIndex or PeriodIndex, \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1276\u001b[0;31m                         \"but got an instance of %r\" % type(ax).__name__)\n\u001b[0m\u001b[1;32m   1277\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1278\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_get_grouper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalidate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: Only valid with DatetimeIndex, TimedeltaIndex or PeriodIndex, but got an instance of 'RangeIndex'"
+     ]
+    }
+   ],
    "source": [
     "# Group the timeseries into monthly buckets\n",
     "# Take the mean of each group \n",
     "# get the first 10 elements of resulting timeseries\n",
     "\n",
+    "CO2_monthly= CO2['co2'].resample('MS')\n",
+    "CO2_monthly_mean = CO2_monthly.mean()\n",
+    "\n",
+    "CO2_monthly_mean.head(10)\n",
     "\n",
     "# 1958-03-01    316.100000\n",
     "# 1958-04-01    317.200000\n",
@@ -303,7 +718,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
